ncc/testsuite/positive/Issue-1299.n
using System;

module Program
{
  Main() : void
  {
    def p : int? = 20;    
    when (p != 20 :> int?)
      Console.WriteLine("A");
    when (p == 20 :> int?)
      Console.WriteLine("B");
    when (!(p == 20 :> int?))
      Console.WriteLine("C");
      
      
    def p : int? = null;    
    when (p != null : int?)
      Console.WriteLine("A");
    when (p == null : int?)
      Console.WriteLine("B");
    when (!(p == null : int?))
      Console.WriteLine("C");
  }
}

/*
BEGIN-OUTPUT
B
B
END-OUTPUT
*/